docs(开户指南): 添加福利开户文档，包含券商选择和常见问题解答

--- a/docs/01.业务办理/01.kh.md
+++ b/docs/01.业务办理/01.kh.md
@@ -1,17 +1,15 @@
 ---
-title: 免五开户
+title: 福利开户
 author: 老倔驴
 date: 2025-11-17
 permalink: /kh
-sidebar: false
 layout: doc
 ---
 
-
-::: tip 提醒
-市场有风险，入市需谨慎
-
+::: tip
+<h3>市场有风险，入市需谨慎</h3>
 官方数据显示50万以下散户超过90%是亏损
+  
 ::: right
 2025-02-13 @老倔驴
 :::
@@ -34,8 +32,8 @@ layout: doc
 :::
 
 ## 如何联系？
-企微微信
-<img src="/qrcode/qiwei1.png"  width="200" />
+
+<img src="/qrcode/qiwei2_pp.jpg"  width="200" />
 
 或者钉钉搜 m5khcom
 (请备注来意)
