--- a/docs/01.投资开户/01.kh.md
+++ b/docs/01.投资开户/01.kh.md
@@ -1,10 +1,44 @@
 ---
-title: 常见问题
+title: 🔥大A开户
 author: 老倔驴
 date: 2025-11-17
-permalink: /faq
+permalink: /kh
+sidebar: false
 layout: doc
 ---
+
+::: tip
+<h3>市场有风险，入市需谨慎</h3>
+官方数据显示50万以下散户超过90%是亏损
+  
+::: right
+2025-02-13 @老倔驴
+:::
+
+## 有哪些券商？
+
+<BrokerTable />
+
+::: note
+加我发你更详细的表格,另外还有：港美股开户，渣打远程开港卡，期货开户
+:::
+
+### 不知道怎么选？
+1. **只玩ETF的聪明钱** YH ETF万0.5 ，1毛起收非常合适。适合大多数散户，宽指ETF+逆回购+打新，我妹妹等朋友也是推荐这家，劝退个股。
+2. 低门槛免五的 推荐上市券商 XD万0.854 ，汇金系，上周爆出中金重组，另外还有长江国融可选。
+3. 50 万+的大佬们 GT万0.8免五，各项费率都很优秀，当然不免五的万 0.641 的广发也可以的。
+4. 量化选手SW50W ，可开miniqmt，国金20w门槛但不免五，东北江海等元旦后 。
+5. 两融银河广发银河：50w-3.5%，100w-3.3%,200w-3.0%,700w-2.88%,1000w-2.6%
+
+
+
+## 如何联系？
+1. Wechat:
+<Qrcode />
+
+2. Dingtalk: m5khcom
+
+(请备注来意)
 
 ## 常见问题FAQ
 ### 1. 什么是“免五”？
@@ -77,3 +111,30 @@ x起收指最低起售门槛，不满x按下收取，比如万0.5免五0.1元起
 
 ### 15. 哪些券商支持同花顺云条件单？
 支持同花顺云条件单的券商有：江海、大平洋等
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+       
+      
+
+
+
+
+        
+       
+        
+      
+       
+    
+      
