docs(Business): 更新券商推荐信息
调整低门槛免五的券商推荐内容，移除XD证券并添加长江湘财，同时更新元旦后可能的变化

--- a/docs/Business/01.kh.md
+++ b/docs/Business/01.kh.md
@@ -25,7 +25,7 @@ layout: doc
 
 ### 不知道怎么选？
 1. **只玩ETF的聪明钱** YH ETF万0.5 ，1毛起收非常合适。适合大多数散户，宽指ETF+逆回购+打新，我妹妹等朋友也是推荐这家，劝退个股。
-2. 低门槛免五的 推荐上市券商 XD万0.854 ，汇金系，上周爆出中金重组，另外还有长江国融可选。
+2. 低门槛免五的 推荐上市券商长江湘财等，不满意等元旦后。
 3. 50 万+的大佬们 GT万0.8免五，各项费率都很优秀，当然不免五的万 0.641 的广发也可以的。
 4. 量化选手SW50W ，可开miniqmt，国金20w门槛但不免五，东北江海等元旦后 。
 5. 两融银河广发银河：50w-3.5%，100w-3.3%,200w-3.0%,700w-2.88%,1000w-2.6%
