docs: 更新券商入金门槛和联系方式
更新开源券商的入金门槛从3万降至2万
修改联系方式部分，简化微信说明并添加红包活动提示

--- a/docs/Business/01.kh.md
+++ b/docs/Business/01.kh.md
@@ -30,13 +30,13 @@ layout: doc
 4. 量化选手SW50W ，可开miniqmt，国金20w门槛但不免五，东北江海等元旦后 。
 5. 两融银河广发：50w-3.5%，100w-3.3%,200w-3.0%,700w-2.88%,1000w-2.6%
 
+
+
 ## 如何联系？
-1. Wechat:
+微信扫码获取详细优惠清单(请备注来意！)
 <Qrcode />
 
-2. Dingtalk: m5khcom
-
-(请备注来意)
+> 🧧没有满意的？登记预约领取6元红包！
 
 ## 常见问题FAQ
 ### 1. 什么是“免五”？
