docs(Business): update kh.md content and date
- Update document date to 2026-01-06
- Revise brokerage recommendations and options
- Modify promotional text and FAQ section

--- a/docs/Business/01.kh.md
+++ b/docs/Business/01.kh.md
@@ -1,7 +1,7 @@
 ---
 title: 大A开户
 author: 老倔驴
-date: 2025-11-17
+date: 2026-01-06
 permalink: /kh
 sidebar: false
 layout: doc
@@ -24,12 +24,14 @@ layout: doc
 :::
 
 ### 不知道怎么选？
-1. **只玩ETF的聪明钱** YH ETF万0.5 ，1毛起收非常合适。适合大多数散户，宽指ETF+逆回购+打新，我妹妹等朋友也是推荐这家，劝退个股。
-2. 低门槛免五的 开源要排队，建议等元旦后。
-3. 50万+的大佬们 GT万0.8免五，各项费率都很优秀，当然不免五的万 0.641 的广发也可以的。
-4. 量化选手SW50W ，可开miniqmt，国金20w门槛但不免五，东北江海等元旦后 。
-5. 两融银河广发：50w-3.5%，100w-3.3%,200w-3.0%,700w-2.88%,1000w-2.6%
-6. LOF白银套利专属营业部，lof申购1折，万0.5免五，名额有限！
+- **只玩ETF的聪明钱** YH ETF 万 0.5 ，1 毛起收非常合适。适合大多数散户，宽指 ETF+逆回购+打新，白银 lof 套利到账最快，上个月多数参与者收益超 60%，目前门槛更低。
+- **低门槛还想个股免五** HB 最佳，其它资源陆续增加中..
+- **量化选手** miniqmt 申 W 东 B 可选，后者门槛低。也有 Ptrade5 万门槛，当学习用很合适。
+- ** 50W以上的大佬** 选择宽裕，大券商还有 etf 万 0.45,1 分起，最低万 0.641 且免五
+- ** 两融银河广发平安** 50w-3.5%，100w-3.3%,200w-3.0%,700w-2.88% 另外，渣打远程开港卡，港美复星可选；
+- 支持腾讯自选股的有国x可开
+年前年后不易，被某营业部放鸽子，低门槛几乎没有，KY 名额有限老排队..让大家久等了..
+
 
 
 
@@ -37,7 +39,7 @@ layout: doc
 微信扫码获取详细优惠清单(请备注来意！)
 <Qrcode />
 
-> 🧧没有满意的？登记预约领取6元红包！
+> 没有满意的？告诉我们你的要求，帮你找，也有少数隐藏款，不便上架！
 
 ## 常见问题FAQ
 ### 1. 什么是“免五”？
