docs: fix punctuation in business document

--- a/docs/Business/01.kh.md
+++ b/docs/Business/01.kh.md
@@ -39,7 +39,7 @@ layout: doc
 微信扫码获取详细优惠清单(请备注来意！)
 <Qrcode />
 
-> 没有满意的？告诉我们你的要求，帮你找，也有少数隐藏款，不便上架！
+> 没有满意的？告诉我们你的要求帮你找，也有少数隐藏款不便上架！
 
 ## 常见问题FAQ
 ### 1. 什么是“免五”？
