docs(Business): add account opening instructions to gmg doc

--- a/docs/Business/02.gmg.md
+++ b/docs/Business/02.gmg.md
@@ -74,6 +74,8 @@ layout: doc
 3. 持有香港证监会颁发的第1、2、4、6、9类牌照及首批获得虚拟资产牌照全球一站式Web5（Web2+Web3）财富管理平台香港券商
 4. 丰富的交易标的：港股、美股、期权、债券、票据、加密货币、RWA等。
 
+## 如何开户
+加微信：netqqnet，备注：fx开户
 
 **最新活动**
 ![](http://images.m5kh.com/picgo/7f1612ca6226fa6713a6fffad8e97703.jpg)
