docs(Business): update brokerage recommendations and rates
Update the brokerage recommendations section with current information and correct interest rates for margin trading. Remove outdated options and clarify available choices.

--- a/docs/Business/01.kh.md
+++ b/docs/Business/01.kh.md
@@ -24,11 +24,11 @@ layout: doc
 :::
 
 ### 不知道怎么选？
-- **只玩ETF的聪明钱** YH ETF 万 0.5 ，1 毛起收非常合适。适合大多数散户，宽指 ETF+逆回购+打新，白银 lof 套利到账最快，上个月多数参与者收益超 60%，目前门槛更低。
-- **低门槛还想个股免五** HB 最佳，其它资源陆续增加中..
-- **量化选手** miniqmt 申 W 东 B 可选，后者门槛低。也有 Ptrade5 万门槛，当学习用很合适。
-- **50W以上的大佬** 选择宽裕，大券商还有 etf 万 0.45,1 分起，最低万 0.641 且免五
-- **两融银河广发平安** 50w-3.5%，100w-3.3%,200w-3.0%,700w-2.88% 另外，渣打远程开港卡，港美复星可选；
+- **只玩ETF的聪明钱** YH ETF 万0.5 ，1毛起收非常合适。适合大多数散户，宽指 ETF+逆回购+打新，白银 lof 套利到账最快，上个月多数参与者收益超 60%，目前门槛更低。
+- **低门槛还想个股免五** 需要等待..
+- **量化选手** miniqmt 申W。也有 Ptrade5 万门槛，当学习用很合适。
+- **50W以上的大佬** 选择宽裕，大券商还有 etf 万0.45,1分起，最低万 0.641 且免五
+- **两融银河广发平安** 50w-3.5%，100w-3.3%,200w-3.1%,700w-2.88% 另外，渣打远程开港卡，港美复星可选；
 - 支持腾讯自选股的有国x可开
 
 年前年后不易，被某营业部放鸽子，低门槛几乎没有，KY 名额有限老排队..让大家久等了..
