docs(Business): update brokerage information and remove outdated notes

--- a/docs/Business/01.kh.md
+++ b/docs/Business/01.kh.md
@@ -28,10 +28,9 @@ layout: doc
 - **低门槛还想个股免五** 需要等待..
 - **量化选手** miniqmt 申W。也有 Ptrade5 万门槛，当学习用很合适。
 - **50W以上的大佬** 选择宽裕，大券商还有 etf 万0.45,1分起，最低万 0.641 且免五
-- **两融银河广发平安** 50w-3.5%，100w-3.3%,200w-3.1%,700w-2.88% 另外，渣打远程开港卡，港美复星可选；
-- 支持腾讯自选股的有国x可开
+- **大券商地两融** 50w-3.5%，100w-3.3%,200w-3.1%,700w-2.88% 另外，渣打远程开港卡，港美复星可选；
+- **打板利器** 东莞万0.76，20万获得上限50人的VIP通道(不限制人数的都是假的，一般需要100门槛的)
 
-年前年后不易，被某营业部放鸽子，低门槛几乎没有，KY 名额有限老排队..让大家久等了..
 
 
 
