docs(Business): update image reference in gmg.md
Replace external image URL with local file fx_jg.png and remove outdated invitation link

--- a/docs/Business/02.gmg.md
+++ b/docs/Business/02.gmg.md
@@ -64,7 +64,7 @@ layout: doc
 
 ## 券商怎么选？
 基本上都是0佣金，但有服务费，详细如下表：
-![](http://images.m5kh.com/picgo/c38d43bd9ddf3ead990a52c5e7517d6d.jpg)
+![](/fx_jg.png)
 
 ## 关于复星
 费率不错，开户方便
@@ -80,4 +80,4 @@ layout: doc
 **最新活动**
 ![](http://images.m5kh.com/picgo/7f1612ca6226fa6713a6fffad8e97703.jpg)
 
-[复星优惠活动邀请链接](https://h5.fotechwealth.com/pages/startAccount.html?channel=030007&aeCode=B2&invitationCode=TQW7UM&langType=zhCn)
+
