docs(Business): 更新开户联系方式及备注信息

--- a/docs/Business/02.gmg.md
+++ b/docs/Business/02.gmg.md
@@ -75,7 +75,7 @@ layout: doc
 4. 丰富的交易标的：港股、美股、期权、债券、票据、加密货币、RWA等。
 
 ## 如何开户
-加微信：netqqnet，备注：fx开户
+Wechat：netqqnet （备注 fx,推荐朋友有红包🧧）
 
 **最新活动**
 ![](http://images.m5kh.com/picgo/7f1612ca6226fa6713a6fffad8e97703.jpg)
